<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.example.designme.ui.home.HomeFragment"
        android:label="@string/My_Desig"
        tools:layout="@layout/fragment_home" >
        <action
            android:id="@+id/action_navigation_home_to_details_Fragment"
            app:destination="@id/details_Fragment" />
    </fragment>

    <fragment
        android:id="@+id/navigation_dashboard"
        android:name="com.example.designme.ui.FavouriteFragment.FavFragment"
        android:label="@string/favourites"
        tools:layout="@layout/fragment_favourite" >
        <action
            android:id="@+id/action_navigation_dashboard_to_details_Fragment"
            app:destination="@id/details_Fragment" />
    </fragment>

    <fragment
        android:id="@+id/navigation_notifications"
        android:name="com.example.designme.ui.Addfragment.AddFragment"
        android:label="@string/Add_new"
        tools:layout="@layout/fragment_add" />
    <fragment
        android:id="@+id/details_Fragment"
        android:name="com.example.designme.ui.Details_Fragment"
        android:label=""
        tools:layout="@layout/fragment_details_" >
        <action
            android:id="@+id/action_details_Fragment_to_navigation_home"
            app:destination="@id/navigation_home" />
        <argument
            android:name="itemdesign"
            app:argType="com.example.designme.models.designsItem" />
        <action
            android:id="@+id/action_details_Fragment_to_navigation_dashboard"
            app:destination="@id/navigation_dashboard" />
    </fragment>
</navigation>